samples/_failures_safe/1761213241_2f1fe1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b677ad44.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_b677ad44.c:142:13: error: expected expression at end of input
  142 |             line[len -
      |             ^~~~
./samples/SAFE/__tmp_b677ad44.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b677ad44.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b677ad44.c:142:13: error: expected declaration or statement at end of input
